Closed Bug 1534188 Opened 5 years ago Closed 5 years ago

Not smooth text on https://flutter.dev

Categories

(Core :: Graphics: ImageLib, defect, P3)

67 Branch
defect

Tracking

()

RESOLVED FIXED
mozilla67
Tracking Status
firefox67 --- fixed

People

(Reporter: sirak2010, Assigned: aosmond)

References

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:67.0) Gecko/20100101 Firefox/67.0

Steps to reproduce:

Go to https://flutter.dev and see the logo text and all other text. i see some hard edges on my laptop

Actual results:

text not anti aliased , but i dont think the issue is only on webrender i also have noticed it on gecko. stable firefox 65.0.2

Expected results:

clear text as i am seeing on my chrome browser

Andrew, it looks like the flutter logo in the top-left corner is an SVG that just seems to contain only an embedded PNG. That embedded PNG is then seemingly getting a bit mutilated when downscaled, so that there are some aliasing artifacts you can see noticeably on, say, the curve of the "u" or the "e". Maybe worth a look?

Component: Graphics: WebRender → ImageLib

We seem to be decoding the embedded PNG at its native size, and then using low quality downscaling to produce the final result. The surface cache only contains a decoding at the native size. If we just display the embedded PNG directly at the same height/width as the logo, then it looks fine.

Status: UNCONFIRMED → NEW
Ever confirmed: true
Priority: -- → P3

There are a dozen places we should be passing HIGH_QUALITY_SCALING where we do not.

Assignee: nobody → aosmond
Status: NEW → ASSIGNED

Let's see if we can enable FLAG_ASYNC_NOTIFY for these calls while we are at it...:

try: https://treeherder.mozilla.org/#/jobs?repo=try&revision=f3a55549483a25ce40272581802dc99be64cff4e

(In reply to Andrew Osmond [:aosmond] from comment #4)

Let's see if we can enable FLAG_ASYNC_NOTIFY for these calls while we are at
it...:

try:
https://treeherder.mozilla.org/#/
jobs?repo=try&revision=f3a55549483a25ce40272581802dc99be64cff4e

Async notify should be enabled for all painting calls already, just more closer to imagelib, ie here for a lot of calls

https://searchfox.org/mozilla-central/rev/aae527894a97ee3bbe0c2cfce9c67c59e8b8fcb9/layout/base/nsLayoutUtils.cpp#6630

and many other places in layout. I did that when they wanted to interupt js for painting or something a while back.

(In reply to Timothy Nikkel (:tnikkel) from comment #6)

(In reply to Andrew Osmond [:aosmond] from comment #4)

Let's see if we can enable FLAG_ASYNC_NOTIFY for these calls while we are at
it...:

try:
https://treeherder.mozilla.org/#/
jobs?repo=try&revision=f3a55549483a25ce40272581802dc99be64cff4e

Async notify should be enabled for all painting calls already, just more closer to imagelib, ie here for a lot of calls

https://searchfox.org/mozilla-central/rev/aae527894a97ee3bbe0c2cfce9c67c59e8b8fcb9/layout/base/nsLayoutUtils.cpp#6630

and many other places in layout. I did that when they wanted to interupt js for painting or something a while back.

And apparently I reviewed it but clean forgot :).

Pushed by aosmond@gmail.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/8647c1f78210
Use high quality downscaling for raster images embedded in SVGs. r=tnikkel
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla67

== Change summary for alert #19929 (as of Fri, 15 Mar 2019 03:52:47 GMT) ==

Improvements:

8% tsvg_static windows7-32 pgo e10s stylo 44.70 -> 41.02

For up to date results, see: https://treeherder.mozilla.org/perf.html#/alerts?id=19929

(In reply to Florin Strugariu [:Bebe] from comment #10)

== Change summary for alert #19929 (as of Fri, 15 Mar 2019 03:52:47 GMT) ==

Improvements:

8% tsvg_static windows7-32 pgo e10s stylo 44.70 -> 41.02

For up to date results, see: https://treeherder.mozilla.org/perf.html#/alerts?id=19929

I thought it might have a small impact, but yay for measurable impact \o/.

Note: -
if you check https://flutter.dev/assets/flutter-lockup-4cb0ee072ab312e59784d9fbf4fb7ad42688a7fdaea1270ccf6bbf4f34b7e03f.svg

the rendering is fine. which is odd for me because the resource address the same URI reference on the site https://flutter.dev

QA Whiteboard: [qa-67b-p2]
Depends on: 1550710
Regressions: 1566895
Regressions: 1660347
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: