Bug 1534188 - Use high quality downscaling for raster images embedded in SVGs. r=tnikkel

Differential Revision: https://phabricator.services.mozilla.com/D23374